src/test/ui/issues/issue-33571.stderr
error: this unsafe trait should be implemented explicitly
  --> $DIR/issue-33571.rs:2:10
   |
LL |          Sync,
   |          ^^^^

error: aborting due to previous error

