src/test/ui/issues/issue-33571.rs
#[derive(Clone,
         Sync, //~ ERROR this unsafe trait should be implemented explicitly
         Copy)]
enum Foo {}
